crates/shingetsu-compiler/tests/compile_fail/enum_two_table_structs.stderr
error: variants `A` and `B` accept the same Lua types; this is ambiguous
  --> tests/compile_fail/enum_two_table_structs.rs:16:5
   |
16 |     B(Bar),
   |     ^
